# task_manager

./: pyproject.toml
main/: admin.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_user_role.py  0003_tag_task.py  0004_alter_task_deadline_alter_task_priority_and_more.py  0005_user_date_of_birth_user_phone.py
main/models/: tag.py  task.py
main/tests/: base.py  test_admin.py  test_tag.py  test_task.py  test_user.py
task_manager/: settings.py  urls.py
